<resources>
    <string name="app_name">CuentaCopas</string>
    <string name="N_amigos">Numero de Amigos</string>
    <string name="N_copas">Numero de Copas</string>
    <string name="Abeber">!! A BEBER !!</string>
    <string name="cantidad_copas">Copas Totales:</string>
    <string name="btnReset">Resetear</string>
    <string name="TamText">Tamaño de Texto:</string>
    <string name="amigo">Amigo</string>
    <string name="MensgError">El numero de amigos no puede ser mayor que el numero de copas</string>
    <string name="sincopas">No quedan mas copas:</string>
    <string name="notienescopas">No tienes copas para añadir</string>
</resources>